syntax = "proto3";

package ligato.linux.punt;

option go_package = "go.ligato.io/vpp-agent/v3/proto/ligato/linux/punt;linux_punt";

/* Proxy allows to listen on network socket or unix domain socket, and resend to another network/unix domain socket */
message Proxy {
    oneof rx {                          /* Socket to listen */
        PortBased rx_port= 1;
        SocketBased rx_socket = 2;
    }
    oneof tx {                          /* Socket to redirect */
        PortBased tx_port= 3;
        SocketBased tx_socket = 4;
    }
}

/* Define network socket type */
message PortBased {
    enum L4Protocol {           /* L4 protocol */
        UNDEFINED_L4 = 0;
        TCP = 6;
        UDP = 17;
    }
    L4Protocol l4_protocol = 1;
    enum L3Protocol {           /* L3 protocol */
        UNDEFINED_L3 = 0;
        IPV4 = 1;
        IPV6 = 2;
        ALL = 3;
    }
    L3Protocol l3_protocol = 3;
    uint32 port = 4;
}

/* Define unix domain socket type for IPC */
message SocketBased {
    string path = 1;
}
